fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     outline: 2px solid red;
-} */
+}
 
 body {
   max-width: 1000px;
@@ -45,7 +45,7 @@ img {
 .main {
   display: flex;
   flex-direction: column;
-  height: 2000px;
+  flex: 2000px;
   flex: 1;
   gap: 20px;
 }
